tests/baselines/reference/esDecoratorsMetadata1(strict=true,target=es2022).errors.txt
/foo.ts(2,13): error TS7006: Parameter '_' implicitly has an 'any' type.
/foo.ts(2,16): error TS7006: Parameter 'context' implicitly has an 'any' type.
/foo.ts(13,1): error TS2531: Object is possibly 'null'.
/foo.ts(14,1): error TS2531: Object is possibly 'null'.


==== /foo.ts (4 errors) ====
    function meta(key: string, value: string) {
        return (_, context) => {
                ~
!!! error TS7006: Parameter '_' implicitly has an 'any' type.
                   ~~~~~~~
!!! error TS7006: Parameter 'context' implicitly has an 'any' type.
            context.metadata[key] = value;
        };
    }
    
    @meta('a', 'x')
    class C {
        @meta('b', 'y')
        m() { }
    }
    
    C[Symbol.metadata].a; // 'x'
    ~~~~~~~~~~~~~~~~~~
!!! error TS2531: Object is possibly 'null'.
    C[Symbol.metadata].b; // 'y'
    ~~~~~~~~~~~~~~~~~~
!!! error TS2531: Object is possibly 'null'.
    